# vantage

./: .dockerignore  .gitignore  BRIEF_V2_REPORT.md  BUTTON_VERIFICATION_REPORT.md  CI_REPORT.md  CLAUDE.md  COMPLIANCE.md  IMAGERY_UX_FIXES_REPORT.md  INSTALL.md  MODEL_WEIGHTS_REPORT.md  OFFLINE_BUNDLE_REPORT.md  PACKAGE_REPORT.md  PACKAGING_V2_REPORT.md  README.md  RECONCILIATION_REPORT.md  RUN_REPORT.md  SAR_AND_AUTO_DETECTION_REPORT.md  SECURITY_FIXES_REPORT.md  VESSEL_DETECTION_REPORT.md  install.sh
.github/workflows/: ci.yml  release.yml
apps/api/: Dockerfile  alembic.ini  pyproject.toml  requirements.lock.txt
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_enable_postgis.py  0002_create_core_tables.py  0003_create_detection_table.py  0004_aoi_sensor_and_monitor_detect_on_change.py  0005_analysis_detection_status.py
apps/api/app/: main.py
apps/api/app/core/: celery_app.py  config.py  limiter.py  security.py
apps/api/app/db/: session.py
apps/api/app/imagery/: base.py  earth_search.py  factory.py  pgstac.py  sensor.py  static_catalog.py
apps/api/app/models/: __init__.py  analysis_result.py  aoi.py  detection.py  event.py  mixins.py  monitor.py
apps/api/app/routers/: analyses.py  aois.py  auth.py  detections.py  events.py  inference.py  monitors.py  stac.py
apps/api/app/schemas/: analysis_result.py  aoi.py  auth.py  detection.py  event.py  geo.py  inference.py  monitor.py  stac.py
apps/api/app/scripts/: seed_demo_data.py
apps/api/app/services/: change_detection_pipeline.py  cog_writer.py  detection_pipeline.py  events_pubsub.py  sar_change_detection_pipeline.py  storage.py
apps/api/app/tasks/: change_detection.py  monitor_sweep.py
apps/api/tests/: test_auth.py  test_config.py  test_imagery_sensor.py  test_inference_status.py  test_monitor_sweep.py  test_sar_pipeline.py  test_schemas.py  test_static_catalog.py
apps/launcher/: package-lock.json  package.json
apps/launcher/launcher-core/: Cargo.toml
apps/launcher/launcher-core/src/: compose.rs  config.rs  health.rs  images.rs  lib.rs  runtime_detect.rs  secrets.rs  seed.rs  support_bundle.rs
apps/launcher/src-tauri/: Cargo.toml  tauri.conf.json
apps/launcher/src-tauri/icons/: icon.icns
apps/launcher/src-tauri/src/: boot.rs  main.rs  state.rs
apps/web/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
apps/web/public/: runtime-config.json  splash.html
apps/web/src/: App.tsx  main.tsx  styles.css  vite-env.d.ts
apps/web/src/api/: analyses.ts  aois.ts  auth.ts  client.ts  detections.ts  events.ts  inference.ts  monitors.ts  stac.ts  types.ts
apps/web/src/components/: AOIPanel.tsx  BootSequence.tsx  CommandBar.tsx  Compass.tsx  GlobalActivityBar.tsx  Inspector.tsx  LayersControl.tsx  MapCanvas.tsx  ModeSwitcher.tsx  MonitorPanel.tsx  ResultsFeed.tsx  StatusStrip.tsx  TemporalScrubber.tsx  Toast.tsx
apps/web/src/lib/: geo.ts  maplibreStyle.ts  mgrs.ts  monitorAlerts.ts  runtimeConfig.ts  scaleBar.ts  sensor.ts  tileUrl.ts  useAlertToastWatcher.ts
apps/web/src/store/: analysisStore.ts  aoiStore.ts  authStore.ts  eventStreamStore.ts  mapStore.ts  toastStore.ts
docs/: AIRGAP.md  MANUAL.md  TROUBLESHOOTING.md
infra/: .env.example  .env.prod.template  docker-compose.gpu.yml  docker-compose.prod.yml  docker-compose.yml
infra/db-init/: 01-roles.sql  01-roles.sql.template
infra/db-init-prod/: 01-roles.sql.template
infra/demo-data/: manifest.json
infra/demo-data/2025-06-19/: item.json  scl.tif
infra/demo-data/2025-11-01/: item.json  scl.tif
infra/pgstac-migrate/: Dockerfile  requirements.lock.txt
run_artifacts/: analysis-result-first-attempt-stuck.json  change-analysis-result.csv  change-tilejson.json  detections-diagnostic.json  detections.geojson  monitor-event.csv  monitor-sweep-analysis-result.csv  sse-event-captured.txt  stac-search-summer.json  stac-search-winter.json
run_artifacts/service-logs/: api.log.tail  beat.log.tail  inference.log.tail  tiler.log.tail  worker.log.tail
scripts/: check_weapons_boundary.sh  generate_dev_secrets.py  smoke.sh
scripts/package/: build-images.sh  build_demo_stac_items.py  fetch_demo_data.py  save-images.sh  set-version.sh  split-images.sh
scripts/train_vessel_detector/: evaluate.py  prepare_dataset.py  train.py
services/inference/: Dockerfile  pyproject.toml  requirements-cuda.in  requirements.cuda.lock.txt  requirements.lock.txt
services/inference/app/: main.py  schemas.py  security.py
services/inference/app/core/: config.py
services/inference/app/models/: base.py  factory.py  torchvision_fasterrcnn.py  torchvision_fasterrcnn_vessel.py
services/inference/app/routers/: detect.py  health.py
services/inference/tests/: test_detect_router.py
services/inference/weights/: README.md
services/tiler/: Dockerfile  pyproject.toml  requirements.lock.txt
services/tiler/app/: main.py  security.py
services/tiler/tests/: test_security.py
