[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vantage-api"
version = "0.1.0"
description = "VANTAGE API: AOIs, STAC search, change-detection analyses, monitors, events."
requires-python = ">=3.11"
dependencies = [
    "fastapi~=0.115",
    "uvicorn[standard]~=0.30",
    "pydantic-settings~=2.4",
    "sqlalchemy~=2.0",
    "geoalchemy2~=0.15",
    "alembic~=1.13",
    "psycopg[binary]~=3.2",
    "celery~=5.4",
    "redis~=5.0",
    "boto3~=1.34",
    "pystac-client~=0.8",
    "rasterio~=1.3",
    "rio-cogeo~=5.3",
    "shapely~=2.0",
    "pyjwt~=2.9",
    "httpx~=0.27",
    "croniter~=2.0",
    "pillow~=10.3",
]

[project.optional-dependencies]
dev = [
    "pytest~=8.0",
    "pytest-cov~=5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]
