[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vantage-api"
version = "0.1.0"
description = "VANTAGE API: AOIs, STAC search, change-detection analyses, monitors, events."
requires-python = ">=3.11"
dependencies = [
    "fastapi~=0.115",
    "uvicorn[standard]~=0.30",
    "pydantic-settings~=2.4",
    "sqlalchemy~=2.0",
    "geoalchemy2~=0.15",
    "alembic~=1.13",
    "psycopg[binary]~=3.2",
    "celery~=5.4",
    "redis~=5.0",
    "boto3~=1.34",
    "pystac-client~=0.8",
    "rasterio~=1.3",
    "rio-cogeo~=5.3",
    "shapely~=2.0",
    "pyjwt~=2.9",
    "httpx~=0.27",
    "croniter~=2.0",
    # Not imported directly by apps/api code -- packages/geo's vantage_geo.sar
    # (SAR despeckling) needs it, and packages/geo is installed --no-deps in
    # the Dockerfile (see its comment), so this lockfile is where its
    # transitive dependency actually gets pinned/hash-verified, same as
    # rasterio above.
    "scipy~=1.13",
    "pillow~=12.2",  # 10.4.0 had 6 known CVEs (pip-audit, CI security-scan job) — 12.2.0+ fixes all of them
    # BRIEF v2: closes SECURITY_FIXES_REPORT.md's one explicitly-flagged
    # remaining gap ("Rate limiting (SlowAPI) — Not done"). See
    # app/core/limiter.py.
    "slowapi~=0.1",
]

[project.optional-dependencies]
dev = [
    # BRIEF v2: pip-audit flagged pytest 8.4.2 (PYSEC-2026-1845, fixed in
    # 9.0.3). Dev-only dependency, never shipped in any production image,
    # but a known-fixable vulnerability is worth closing regardless.
    "pytest~=9.0",
    "pytest-cov~=5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]
