[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vantage-inference"
version = "0.1.0"
description = "VANTAGE placeholder object detector: ModelBackend interface over a COCO-pretrained torchvision detector (BSD-licensed; no Ultralytics YOLO)."
requires-python = ">=3.11"
dependencies = [
    "fastapi~=0.115",
    "uvicorn[standard]~=0.30",
    "pydantic-settings~=2.4",
    "torch~=2.3",
    "torchvision~=0.18",
    "pillow~=12.2",  # 10.4.0 had 6 known CVEs (pip-audit, CI security-scan job) — 12.2.0+ fixes all of them
]

[tool.hatch.build.targets.wheel]
packages = ["app"]
